syntax = "proto3";

package authPackage;

service Auth {
    rpc renewAccessToken(RenewAccessTokenInput) returns (RenewAccessTokenPayload) {};
    rpc createUser(CreateUserInput) returns (CreateUserPayload) {};
}

message RenewAccessTokenInput {
    string refreshtoken = 1;
    string sessionId = 2;
}

message RenewAccessTokenPayload {
    string validAccessToken = 1;
}

message CreateUserInput {
    string nanoId = 1;
}

message CreateUserPayload {
    string done = 1;
}